--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,26 @@ body {
     width: auto;
     height: 1cm;
 }
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+.topnav a {
+  float: center;
+  color: #DE98ED;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.topnav a.active {
+  background-color: #030358;
+  color: white;
+}
 .my-container {
     background-color: #030358;
     border-radius: 10px;
@@ -44,6 +64,5 @@ body {
     width: auto;
     height: 1cm;
     margin-top: 40px;
-    padding-bottom: 10mm;
+    padding-bottom: 1mm;
 }
-		
