--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,7 @@ body {
   font-size: large;
 }
 .my-header {
-  font-family: 'Anton', sans-serif;
-  color: black;
+  font-family: 'Dela Gothic One', cursive; color: black;
   background-color: #DE98ED;
   text-align: center;
   padding-top: 2mm;
@@ -57,8 +56,7 @@ body {
     padding-right: 10px
 }
 #footer	{
-    font-family: 'Anton', sans-serif;
-    color: black;
+	font-family: 'Dela Gothic One', cursive; color: black;
     background-color: #DE98ED;
     text-align: center;
     padding-top: 5mm;
